cluster/manifests/pyroscope/overlays/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pyroscope
  labels:
    name: pyroscope
    pod-security.kubernetes.io/enforce: restricted
