cluster/manifests/pyroscope/overlays/dev/network_policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
spec:
  podSelector: {}
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-envoy-stats-scrape
spec:
  podSelector: {}
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: prometheus
          podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus
              app.kubernetes.io/component: ""
      ports:
        - protocol: TCP
          port: 15020
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-traffic-agent
spec:
  podSelector:
    matchLabels:
      telepresence.io/workloadEnabled: "true"
  ingress:
    - from:
        - namespaceSelector: {}
      ports:
        - protocol: TCP
          port: 9900
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: pyroscope
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: pyroscope
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: pyroscope
          podSelector:
            matchLabels:
              app.kubernetes.io/name: pyroscope
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: pyroscope-query-frontend
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: pyroscope
      app.kubernetes.io/component: query-frontend
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: grafana
          podSelector:
            matchLabels:
              app.kubernetes.io/name: grafana
      ports:
        - protocol: TCP
          port: 4040
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: pyroscope-distributor
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: pyroscope
      app.kubernetes.io/component: distributor
  ingress:
    - ports:
        - protocol: TCP
          port: 4040
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: pyroscope-minio
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: pyroscope
      app.kubernetes.io/component: minio
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: pyroscope
          podSelector:
            matchLabels:
              app.kubernetes.io/name: pyroscope
        - namespaceSelector:
            matchLabels:
              name: pyroscope
          podSelector:
            matchLabels:
              app.kubernetes.io/name: pyroscope
              app.kubernetes.io/component: mc
      ports:
        - protocol: TCP
          port: 9000
